--- a/index.html
+++ b/index.html
@@ -4,107 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webshop Üzenőfal</title>
-      <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
-    <script src="firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-database.js"></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: 20px auto;
-        }
-        .products {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-        }
-        .product {
-            background-color: white;
-            border-radius: 10px;
-            padding: 15px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-        .product img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-        .product button {
-            background-color: #28a745;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .product button:hover {
-            background-color: #218838;
-        }
-        .cart {
-            background-color: #fff;
-            padding: 20px;
-            margin-top: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .cart h2 {
-            margin-top: 0;
-        }
-        .cart ul {
-            list-style: none;
-            padding: 0;
-        }
-        .cart ul li {
-            margin-bottom: 10px;
-        }
-        .cart button {
-            background-color: #007bff;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-        }
-        .cart button:hover {
-            background-color: #0056b3;
-        }
-        .message-board {
-            margin-top: 50px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .message-board h3 {
-            margin-top: 0;
-        }
-        .messages {
-            max-height: 300px;
-            overflow-y: auto;
-            border-top: 2px solid #ccc;
-            margin-top: 20px;
-        }
-        .message {
-            background-color: #e9ecef;
-            padding: 10px;
-            margin-bottom: 15px;
-            border-radius: 5px;
-        }
+        body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0; }
+        header { background-color: #333; color: white; padding: 10px 20px; text-align: center; }
+        .container { width: 80%; margin: 20px auto; }
+        .products { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
+        .product { background-color: white; border-radius: 10px; padding: 15px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); text-align: center; }
+        .product img { width: 100%; height: 200px; object-fit: cover; border-radius: 10px; }
+        .product button { background-color: #28a745; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
+        .product button:hover { background-color: #218838; }
+        .cart { background-color: #fff; padding: 20px; margin-top: 30px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
+        .cart h2 { margin-top: 0; }
+        .cart ul { list-style: none; padding: 0; }
+        .cart ul li { margin-bottom: 10px; }
+        .cart button { background-color: #007bff; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; width: 100%; }
+        .cart button:hover { background-color: #0056b3; }
+        .message-board { margin-top: 50px; background-color: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
+        .message-board h3 { margin-top: 0; }
+        .messages { max-height: 300px; overflow-y: auto; border-top: 2px solid #ccc; margin-top: 20px; }
+        .message { background-color: #e9ecef; padding: 10px; margin-bottom: 15px; border-radius: 5px; }
     </style>
 </head>
 <body>
@@ -151,28 +71,23 @@
     </div>
 
     <script>
+        const firebaseConfig = {
+            apiKey: "API_KEY",  // Cseréld ki a saját Firebase API kulcsodra
+            authDomain: "kartyashop-90596.firebaseapp.com",
+            databaseURL: "https://kartyashop-90596-default-rtdb.firebaseio.com",  // Firebase adatbázis URL
+            projectId: "kartyashop-90596",
+            storageBucket: "kartyashop-90596.appspot.com",
+            messagingSenderId: "SENDER_ID",
+            appId: "APP_ID"
+        };
+
+        // Inicializálás
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.database();
+
         let cart = [];
         let totalPrice = 0;
         const messagesContainer = document.getElementById('messages');
-
-        // Betöltjük a tárolt adatokat (ha vannak)
-        function loadStorage() {
-            const storedCart = localStorage.getItem('cart');
-            const storedMessages = localStorage.getItem('messages');
-
-            if (storedCart) {
-                cart = JSON.parse(storedCart);
-                totalPrice = cart.reduce((acc, item) => acc + item.price, 0);
-                updateCart();
-            }
-
-            if (storedMessages) {
-                const messages = JSON.parse(storedMessages);
-                messages.forEach(message => {
-                    addMessageToBoard(message);
-                });
-            }
-        }
 
         // Kosár frissítése
         function updateCart() {
@@ -183,18 +98,19 @@
                 li.textContent = `${item.name} - ${item.price} Ft`;
                 cartItemsList.appendChild(li);
             });
-
             document.getElementById("total-price").textContent = totalPrice;
 
-            // Tároljuk a kosarat a localStorage-ban
-            localStorage.setItem('cart', JSON.stringify(cart));
+            // Kosár mentése Firebase-ba
+            db.ref('carts').set({
+                items: cart,
+                totalPrice: totalPrice
+            });
         }
 
         // Kosárba helyezés
         function addToCart(id, name, price) {
             cart.push({ id, name, price });
             totalPrice += price;
-
             updateCart();
         }
 
@@ -228,19 +144,18 @@
             // Üzenet hozzáadása a falhoz
             addMessageToBoard(message);
 
-            // Tároljuk az üzenetet a localStorage-ban
-            const storedMessages = localStorage.getItem('messages') ? JSON.parse(localStorage.getItem('messages')) : [];
-            storedMessages.push(message);
-            localStorage.setItem('messages', JSON.stringify(storedMessages));
+            // Üzenet mentése Firebase-ba
+            const newMessageRef = db.ref('messages').push();
+            newMessageRef.set({
+                message: message,
+                timestamp: Date.now()
+            });
 
             // Kosár ürítése
             cart = [];
             totalPrice = 0;
             updateCart();
         }
-
-        // Oldal betöltésekor adat betöltés
-        loadStorage();
     </script>
 </body>
 </html>
