--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Webshop Üzenőfal</title>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-database.js"></script>
+    <script src="firebase-app.js"></script>
     <style>
         body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0; }
         header { background-color: #333; color: white; padding: 10px 20px; text-align: center; }
