--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 
-
 <!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webshop Üzenőfal</title>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
-    <script src="firebase-app.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,7 +21,6 @@
         .container {
             width: 80%;
             margin: 20px auto;
-            max-width: 1200px;
         }
         .products {
             display: grid;
@@ -153,42 +148,27 @@
     </div>
 
     <script>
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js";
-        import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js";
-        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyCuGJhygh3Jg4ThLlKIsJrQhhwdGZTPqcE",
-            authDomain: "kartyashop-90596.firebaseapp.com",
-            databaseURL: "https://kartyashop-90596-default-rtdb.firebaseio.com",
-            projectId: "kartyashop-90596",
-            storageBucket: "kartyashop-90596.firebasestorage.app",
-            messagingSenderId: "891615268581",
-            appId: "1:891615268581:web:46bd572eb2b12ad3820e0c"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-        const auth = getAuth(app);
-
         let cart = [];
         let totalPrice = 0;
         const messagesContainer = document.getElementById('messages');
 
-        // Betöltjük az üzeneteket Firebase-ből
-        async function loadMessagesFromFirebase() {
-            const querySnapshot = await getDocs(collection(db, "messages"));
-            querySnapshot.forEach((doc) => {
-                addMessageToBoard(doc.data().message);
-            });
-        }
+        // Betöltjük a tárolt adatokat (ha vannak)
+        function loadStorage() {
+            const storedCart = localStorage.getItem('cart');
+            const storedMessages = localStorage.getItem('messages');
 
-        // Üzenet hozzáadása az üzenőfalhoz
-        function addMessageToBoard(message) {
-            const messageDiv = document.createElement('div');
-            messageDiv.classList.add('message');
-            messageDiv.innerHTML = message;
-            messagesContainer.prepend(messageDiv);
+            if (storedCart) {
+                cart = JSON.parse(storedCart);
+                totalPrice = cart.reduce((acc, item) => acc + item.price, 0);
+                updateCart();
+            }
+
+            if (storedMessages) {
+                const messages = JSON.parse(storedMessages);
+                messages.forEach(message => {
+                    addMessageToBoard(message);
+                });
+            }
         }
 
         // Kosár frissítése
@@ -202,25 +182,39 @@
             });
 
             document.getElementById("total-price").textContent = totalPrice;
+
+            // Tároljuk a kosarat a localStorage-ban
+            localStorage.setItem('cart', JSON.stringify(cart));
         }
 
         // Kosárba helyezés
         function addToCart(id, name, price) {
             cart.push({ id, name, price });
             totalPrice += price;
+
             updateCart();
         }
 
+        // Üzenet hozzáadása az üzenőfalhoz
+        function addMessageToBoard(message) {
+            const messageDiv = document.createElement('div');
+            messageDiv.classList.add('message');
+            messageDiv.innerHTML = message;
+            messagesContainer.prepend(messageDiv);
+        }
+
         // Rendelési kód generálása és üzenet hozzáadása
-        async function generateCode() {
+        function generateCode() {
             if (cart.length === 0) {
                 alert("A kosarad üres!");
                 return;
             }
 
+            // Rendelési kód generálása
             const code = "WEB" + Math.random().toString(36).substr(2, 8).toUpperCase();
-            const customerName = prompt("Add meg a neved:");
+            const customerName = prompt("Add meg a neved:"); // Vásárló neve
 
+            // Üzenet szöveg elkészítése
             const message = `
                 <strong>${customerName}</strong> rendelte a következő termékeket:<br>
                 ${cart.map(item => `${item.name} - ${item.price} Ft`).join('<br>')}<br>
@@ -228,11 +222,13 @@
                 Összesen: ${totalPrice} Ft
             `;
 
-            // Üzenet hozzáadása Firebase-be
-            await addDoc(collection(db, "messages"), { message });
-
-            // Üzenet hozzáadása az üzenőfalhoz
+            // Üzenet hozzáadása a falhoz
             addMessageToBoard(message);
+
+            // Tároljuk az üzenetet a localStorage-ban
+            const storedMessages = localStorage.getItem('messages') ? JSON.parse(localStorage.getItem('messages')) : [];
+            storedMessages.push(message);
+            localStorage.setItem('messages', JSON.stringify(storedMessages));
 
             // Kosár ürítése
             cart = [];
@@ -240,8 +236,8 @@
             updateCart();
         }
 
-        // Oldal betöltésekor üzenetek betöltése Firebase-ből
-        loadMessagesFromFirebase();
+        // Oldal betöltésekor adat betöltés
+        loadStorage();
     </script>
 </body>
 </html>
