--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webshop Üzenőfal</title>
+    <script src="firebase-app.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
