--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webshop Üzenőfal</title>
-    <script src="firebase-app.js"></script>
+    <link rel="stylesheet" href="bolt.sql">
     <style>
         body {
             font-family: Arial, sans-serif;
