--- a/index.html
+++ b/index.html
@@ -39,8 +39,25 @@
             border-radius: 5px;
         }
     </style>
+            <style>
+        .custom-button {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            display: inline-block;
+        }
+        .custom-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
+    <a href="https://petykoweb.github.io/bolt/" class="custom-button">Vissza a fő oldalra</a>
     <h1 style="text-align:center;">Break Aktuális Hírek</h1>
     <div class="container" id="posts"></div>
     
