--- a/index.html
+++ b/index.html
@@ -71,20 +71,23 @@
     <div class="container" id="posts"></div>
     
     <div class="section">
-        <h2>🔥 Break kiírás, bontás, posta, infók, egyebek! 🔥</h2>
+        <h2>🔥 Break kiírás, bontás, infók, posta, egyebek! 🔥</h2>
         <h3>🎯 Break kiírás:</h3>
-        <p><strong>03.04. kedd 18:30</strong> - Panini Donruss Soccer 24/25 blaster box ⚽</p>
-        <p><strong>03.05. szerda 18:30</strong> - Panini NBA Hoops 22/23 blaster box 🏀</p>
-        <p><strong>03.06. csütörtök 18:30</strong> - Panini Fifa Score 21/22 retail box ⚽</p>
-        <p><strong>03.09. vasárnap 18:45</strong> - Topps Carnaval Edition 22/23 UEFA Club Competitions Soccer Hobby Box 🎉</p>
+        <p><strong>03.18. kedd 18:30</strong> - 2022/23 Panini Score FIFA Soccer Retail Box ⚽</p>
+        <p><strong>03.20. csütörtök 18:30</strong> - Upper Deck 2024 Marvel Avengers Booster Box 🦸‍♂️</p>
+        <p><strong>03.23. vasárnap 18:45</strong> - 2 darab Pokémon Grafaiai ex Box 🔥</p>
         <h3>🎥 Tiktok élő:</h3>
-        <p><strong>03.04. kedd 19:30</strong> 📱</p>
-        <p><strong>03.05. szerda 19:30</strong> 📱</p>
+        <p><strong>03.18. kedd 19:30</strong> 📱</p>
+        <p><strong>03.19. szerda 19:30</strong> 📱</p>
+        <p><strong>03.22. szombat 19:45</strong> 📱</p>
         <h3>🃏 Break bontás:</h3>
-        <p><strong>03.03. hétfő 19:30</strong> - Barcelona fan set 🔵🔴</p>
-        <p>Finest Flashback szintérn hétfőre van tervezve, de ha addig nem mindenkitől jön meg az utalás, akkor kedden bontjuk 😊</p>
+        <p><strong>03.18. 19:30</strong> - NBA és Donruss 24/25 🏀</p>
+        <p><strong>03.19. 19:30</strong> - Score 21/22 ⚽</p>
         <h3>📦 Posta poszt:</h3>
-        <p><strong>03.07. péntek 14:00</strong> 🚚</p>
+        <p><strong>03.21. péntek 14:00</strong> 🚚</p>
+        <h3>🔥 Szabad spotok:</h3>
+        <p>Carnaval 22/23</p>
+        <p>Topps chrome 21/22</p>
         <h3>🏆 Nyereményjáték:</h3>
         <p>Megtálalható a kiemelt résznél.</p>
         <p><a href="https://petykoweb.github.io/febpen/" target="_blank">🔗 Weboldalon</a> megtekinthetőek a pakkok és boxok.</p>
@@ -93,14 +96,15 @@
     
     <script>
         const posts = [
-            { date: "03.04. kedd 18:30", title: "Panini Donruss Soccer 24/25 blaster box", image: "" },
-            { date: "03.05. szerda 18:30", title: "Panini NBA Hoops 22/23 blaster box", image: "" },
-            { date: "03.06. csütörtök 18:30", title: "Panini Fifa Score 21/22 retail box", image: "" },
-            { date: "03.09. vasárnap 18:45", title: "Topps Carnaval Edition 22/23 UEFA Club Competitions Soccer Hobby Box", image: "" },
-            { date: "03.04. kedd 19:30", title: "Tiktok élő", image: "" },
-            { date: "03.05. szerda 19:30", title: "Tiktok élő", image: "" },
-            { date: "03.03. hétfő 19:30", title: "Barcelona fan set bontás", image: "" },
-            { date: "03.07. péntek 14:00", title: "Posta poszt", image: "" }
+            { date: "03.18. kedd 18:30", title: "2022/23 Panini Score FIFA Soccer Retail Box", image: "" },
+            { date: "03.20. csütörtök 18:30", title: "Upper Deck 2024 Marvel Avengers Booster Box", image: "" },
+            { date: "03.23. vasárnap 18:45", title: "2 darab Pokémon Grafaiai ex Box", image: "" },
+            { date: "03.18. kedd 19:30", title: "Tiktok élő", image: "" },
+            { date: "03.19. szerda 19:30", title: "Tiktok élő", image: "" },
+            { date: "03.22. szombat 19:45", title: "Tiktok élő", image: "" },
+            { date: "03.18. 19:30", title: "NBA és Donruss 24/25", image: "" },
+            { date: "03.19. 19:30", title: "Score 21/22", image: "" },
+            { date: "03.21. péntek 14:00", title: "Posta poszt", image: "" }
         ];
 
         function renderPosts() {
